force-app/main/default/objects/Account_Domain__c/Account_Domain__c.object-meta.xml
<CustomObject>
    <description>Domains are used by the selfservice to allow TPX users to select what domain they want to create subscriptions under.
This data is synced from the TPX system but new domains can be added here if they are also configured in TPX.</description>
    <label>Account Domain</label>
    <nameField>
        <displayFormat>AD-{000000}</displayFormat>
        <label>Account Domain Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Domains</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>