force-app/main/default/objects/Account_Domain__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short description of the domain</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>