force-app/main/default/objects/Account_Domain__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Domain name</description>
    <label>Domain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>